@@ -1,3 +1,8 @@
+2016-01-24  Charlie Zender  <zender@uci.edu>
+
+	* Implement "cheesy" patch that inverts CW quadrilaterals to make them CCW so Tempest can read them
+	Patch succeeds in making all grids CCW (according to NCO) though Tempest occasionally disagrees
+
 2016-01-18  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.5.5-alpha04 release procedure:
